--- a/.gitignore
+++ b/.gitignore
@@ -202,5 +202,5 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
-data/chart_data/
+data/v2/
 output
